[package]
name = "wnfs-cli"
version = "0.1.0"
description = "A WNFS CLI"
keywords = []
categories = []

include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/wnfs-cli"
repository = "https://github.com/appcypher/wnfs-explorer"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.25"
wnfs-store = { path = "../wnfs-store" }
wnfs = { git = "https://github.com/wnfs-wg/rs-wnfs", branch = "appcypher/mut-api-ext" }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.27.0"
reqwest = "0.11.16"
chrono = "0.4.24"
rand = "0.8.5"
unicode-segmentation = "1.10.1"
thiserror = "1.0.40"

[[bin]]
name = "wnfs"
path = "src/main.rs"

[features]
default = []
