[package]
name = "wnfs-store"
version = "0.1.0"
description = "A WNFS store"
keywords = []
categories = []

include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/wnfs-cli"
repository = "https://github.com/appcypher/wnfs-demo"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
axum = "0.6"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.22", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
wnfs = { git = "https://github.com/wnfs-wg/rs-wnfs", branch = "appcypher/hamt-diff" }
once_cell = "1.16.0"
hashbrown = "0.13.1"
thiserror = "1.0.37"
libipld = "0.14"
multihash = "0.16"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = []

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
